--- a/Css/style.css
+++ b/Css/style.css
@@ -7,8 +7,7 @@
 
 body {
     display: flex;
-   }
-
+}
 
 .sidebar {
     width: 250px;
@@ -36,13 +35,41 @@ body {
     background-color: #34495e;
 }
 
-
 .content {
     margin-left: 250px;
     padding: 20px;
-    width: 100%;
+    width: calc(100% - 250px);
+    text-align: center;
 }
-.logo{
-    width: 120px;
-    height: 100px;
+
+.carousel-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 300px;
+    overflow: hidden;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    position: relative;
 }
+
+.carousel {
+    display: flex;
+    width: 300%; 
+    transition: transform 0.5s ease-in-out;
+}
+
+.carousel img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+    flex: 0 0 100%; 
+}
+
+
+
+
+
+
