--- a/Css/ajustes.css
+++ b/Css/ajustes.css
@@ -4,53 +4,35 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     height: 100vh;
+    flex-direction: column;
 }
-
-h2 {
-    color: #333;
-}
-
-p {
-    color: #555;
-    font-size: 16px;
-    
-}
-
-.Container {
+.settings-container {
+    width: 90%;
+    max-width: 600px;
     background: white;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 300px;
 }
-
-input[type="password"] {
-    width: calc(100% - 20px);
+h1 {
+    color: #333;
+}
+.settings button {
+    display: block;
+    width: 100%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-.botones {
-    background-color: #007bff;
-    color: white;
     border: none;
-    padding: 10px 15px;
-    font-size: 16px;
-    border-radius: 5px;
+    background-color: #007BFF;
+    color: white;
     cursor: pointer;
-    transition: background 0.3s;
+    border-radius: 5px;
+    font-size: 16px;
 }
-
-.botones:hover {
+.settings button:hover {
     background-color: #0056b3;
 }
-
-
