--- a/Css/ajustes.css
+++ b/Css/ajustes.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
     margin: 0;
     padding: 0;
     display: flex;
@@ -12,7 +12,7 @@ body {
 .settings-container {
     width: 90%;
     max-width: 600px;
-    background: white;
+    background: rgb(255, 255, 255);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -27,12 +27,12 @@ h1 {
     padding: 10px;
     margin: 10px 0;
     border: none;
-    background-color: #007BFF;
+    background-color: #0aa73e;
     color: white;
     cursor: pointer;
     border-radius: 5px;
     font-size: 16px;
 }
 .settings button:hover {
-    background-color: #0056b3;
+    background-color: #00b35a;
 }
