--- a/Css/añadir_almacenista.css
+++ b/Css/añadir_almacenista.css
@@ -88,3 +88,21 @@ a:hover {
     color: #1b5e20;
 }
 
+
+.dark-mode {
+    background-color: #121212;
+    color: white;
+}
+
+.dark-mode table {
+    background-color: #1e1e1e;
+    color: white;
+    border-color: white;
+}
+
+.dark-mode button {
+    background-color: #333;
+    color: white;
+    border: 1px solid white;
+}
+
