--- a/Css/registro.css
+++ b/Css/registro.css
@@ -80,4 +80,26 @@ button:hover {
 }
 
 
+.dark-mode {
+    background-color: #222831 !important;
+    color: white !important;
+}
+
+.dark-mode input, 
+.dark-mode textarea, 
+.dark-mode select {
+    background-color: #333 !important;
+    color: rgb(255, 255, 255) !important;
+    border: 1px solid white !important;
+}
+
+.dark-mode button {
+    background-color: #007bff !important;
+    color: white !important;
+    border: none !important;
+}
+
+.dark-mode h2 {
+    color: white !important;
+}
 
