--- a/Css/login.css
+++ b/Css/login.css
@@ -1,51 +1,67 @@
-/* Estilos generales */
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(135deg, #017223, #1cc24d);
+    color: white;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     margin: 0;
 }
 
-/* Contenedor del login */
 .login-container {
-    background: white;
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     text-align: center;
     width: 350px;
 }
 
-/* Título */
 h2 {
+    color: rgb(255, 255, 255);
+    font-size: 24px;
     margin-bottom: 20px;
-    color: #333;
 }
 
-/* Campos de entrada */
+label {
+    display: block;
+    margin: 10px 0 5px;
+    font-size: 14px;
+}
+
 input {
     width: 90%;
     padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-/* Botón */
-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #2e7d32;
-    color: white;
+    margin-bottom: 15px;
     border: none;
     border-radius: 5px;
-    cursor: pointer;
+    background: #2e2e2e;
+    color: white;
+    outline: none;
+}
+
+input::placeholder {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+button {
+    width: 100%;
+    padding: 12px;
+    border: none;
+    border-radius: 5px;
+    background: rgb(6, 163, 53);
+    color: rgb(255, 255, 255);
     font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
 button:hover {
-    background-color: #1b5e20;
+    background: #00cc66;
+    box-shadow: 0 0 10px #00ff80;
 }
+
