--- a/Css/registro.css
+++ b/Css/registro.css
@@ -90,11 +90,11 @@ button:hover {
 .dark-mode select {
     background-color: #333 !important;
     color: rgb(255, 255, 255) !important;
-    border: 1px solid white !important;
+    border: 1px solid rgb(255, 255, 255) !important;
 }
 
 .dark-mode button {
-    background-color: #007bff !important;
+    background-color: #0b9449 !important;
     color: white !important;
     border: none !important;
 }
